feat(task-02): finish task-02
